--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,21 +32,30 @@ section h5 {
 header {
   height: 50%;
 }
-aside {
-  height: 50%;
-  transform: translateY(-50%);
-}
 .navbar {
   background-color: #2B353E;
   height: 40%;
 }
-.secao-corpo{
-  margin-top: 25%;
-  border-top: 1px solid grey;
+.rede-social img {
+  padding: 5px;
 }
-.secao-corpo h2:first-child{
-  padding-bottom: 10px;
-
+#collapse-navbar {
+  border: none;
+}
+aside {
+  height: 50%;
+  transform: translateY(-50%);
+  transition: 0.5s;
+}
+#collapse-navbar{
+ background-color: #2B353E;
+}
+#info {
+  transform: translateY(-20%);
+  z-index: -1;
+}
+#info h1, #info h5  {
+  text-align: center;
 }
 #foto-principal {
   width: 150px;
@@ -56,56 +65,37 @@ aside {
   -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+}
 
+#titulo-hobbies {
+  padding-top: 20px;
 }
-#info {
-  transform: translateY(-20%);
-  z-index: -1;
-}
-#collapse-navbar{
- background-color: #2B353E;
-}
-.hobbie-icon {
-  margin-top: 10%;
-  height: 50px;
-}
-#hobbies h2 {
+#titulo-hobbies h2 {
   margin-top: 5%;
   border-bottom: 1px solid white;
   padding-bottom: 3%;
 }
-#info h1, #info h5  {
-  text-align: center;
-}
-.rede-social img {
-  padding: 5px;
-}
-
-#habilidades{
-  height: 110%;
-}
-#hobbies {
-  padding-top: 20px;
-}
-
-aside {
-  transition: 0.5s;
-}
-
-#collapse-navbar {
-  border: none;
+.hobbie-icon {
+  margin-top: 10%;
+  width: 40px;
+  height: 40px;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
 
 .hobbies-hide {
-
   transition: 0.3s;
   opacity: 0;
+}
+.secao-corpo{
+  margin-top: 25%;
+  border-top: 1px solid grey;
+}
+.secao-corpo h2:first-child{
+  padding-bottom: 10px;
+}
 
-}
-.hobbie-icon {
-  width: 40px;
-  height: 40px;
-}
+
 .progress-bar{
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
@@ -127,38 +117,36 @@ aside {
   letter-spacing: 0.3rem;
   text-transform: uppercase;
 }
-.detalhe-titulo {
-  padding-right: 1%;
-}
-.detalhe-descricao {
-  padding-left: 1%;
-}
-.hobbie-icon {
-  margin-left: 50%;
-    transform: translateX(-50%);
-}
+
 
 @media (min-width: 768px) {
-.detalhe-titulo{
-  padding-left: 20%;
-  padding-right: 0;
-}
-.detalhe-descricao {
-  padding-left: 0;
-}
-.descricao-detalhe{
-  margin-left: 15%;
-}
-.hobbie-icon {
-  width: 90px;
-  height: 90px;
-}
-#hobbies {
-  margin-top: 6%;
-}
+  .detalhe-titulo{
+    padding-left: 20%;
+    padding-right: 0;
+  }
+  .detalhe-descricao {
+    padding-left: 0;
+  }
+  .descricao-detalhe{
+    margin-left: 15%;
+  }
+  .hobbie-icon {
+    width: 90px;
+    height: 90px;
+  }
+  #titulo-hobbies{
+    margin-top: 6%;
+  }
+  .secao-corpo{
+    margin-left: 30%;
+    transform: translateX(-20%);
+  }
+    .secao-corpo h2{
+      margin-top: 30px;
+  }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   body, html {
     min-height: 670px;
     max-width: 1544px;
@@ -176,6 +164,11 @@ aside {
   h5{
    font-size: 1.5rem;
  }
+  header {
+  background-color: #2B353E;
+  height: 10%;
+  width: 100%;
+}
  .navbar {
   width: 100%;
 }
@@ -199,6 +192,7 @@ aside {
   margin-top: 0;
   margin-bottom: 0;
   height: 100%;
+  margin-left: 0;
 
 }
 .secao-ativa{
@@ -210,8 +204,6 @@ aside {
   padding-left: 3%;
   transform: translate3d(0,0,0);
 }
-
-
 #icon-cook {
   transform: translate(60%,100%);
 }
@@ -230,16 +222,8 @@ aside {
 #experiencia-profissional, #habilidades {
   height: 60%;
 }
-
-
-header {
-  background-color: #2B353E;
-  height: 10%;
-  width: 100%;
-}
 .nav {
-  margin-left: 10rem;
-
+  margin-left: 5rem;
   height: 15px;
 }
 .navbar li{
@@ -285,11 +269,11 @@ aside{
   border-radius: 0;
   width: 60%;
 }
-.navbar-collapse{
+#collapse-navbar{
   margin-left: 50px;
 }
 #collapse-navbar ul {
-  margin-left: 27%;
+  margin-left: 24%;
   margin-top: 3%;
   border: none;
 }
@@ -306,85 +290,25 @@ aside{
   border-top-left-radius: 15%;
   border-top-right-radius: 10%;
 }
+                  
 #collapse-navbar ul li .botao-ativo{
   transform: translateY(-20%);
-}
-}
-
-
-
-
-
-
-
-
-
-/*       Barras de Skills animadas           */
-.skillbar {
-  position:relative;
-  display:block;
-  margin-bottom:5px;
-  width:100%;
-  background: rgba(255,255,255,0.5);
-  height:15px;
-  -webkit-border-radius:3px;
-  -webkit-transition:0.4s linear;
-  -moz-transition:0.
-  border-radius:3px;
-  -moz-border-radius:3px;4s linear;
-  -ms-transition:0.4s linear;
-  -o-transition:0.4s linear;
-  transition:0.3s linear;
-  -webkit-transition-property:width, background-color;
-  -moz-transition-property:width, background-color;
-  -ms-transition-property:width, background-color;
-  -o-transition-property:width, background-color;
-  transition-property:width, background-color;
-  z-index: -1;
-}
-.skillbar-title {
-  position:absolute;
-  top:0;
-  left:0;
-  width:10px;
-  font-weight:bold;
-  font-size:9px;
-  color:#ffffff;
-  background:#6adcfa;
-  -webkit-border-top-left-radius:3px;
-  -webkit-border-bottom-left-radius:4px;
-  -moz-border-radius-topleft:3px;
-  -moz-border-radius-bottomleft:3px;
-  border-top-left-radius:3px;
-  border-bottom-left-radius:3px;
-}
-.skillbar-title span {
-  display:block;
-  background:rgba(0, 0, 0, 0.1);
-  padding:0 10px;
-  height: 15px;
-  line-height:10px;
-  -webkit-border-top-left-radius:3px;
-  -webkit-border-bottom-left-radius:3px;
-  -moz-border-radius-topleft:3px;
-  -moz-border-radius-bottomleft:3px;
-  border-top-left-radius:3px;
-  border-bottom-left-radius:3px;
-}
-.skillbar-bar {
-  height:15px;
-  width:0px;
-  background:#6adcfa;
-  border-radius:3px;
-  -moz-border-radius:3px;
-  -webkit-border-radius:3px;
-}
-.skill-bar-percent {
-  position:absolute;
-  right:10px;
-  top:0;
-  font-size:11px;
-  height:10px;
-  line-height:10px;
   color: black;
+  font-weight: bolder;
+  letter-spacing: 0.2rem;
 }
+.progress-bar {
+  text-align: left;
+  height: 100%;
+}
+
+}
+
+
+
+
+
+
+
+
+
