--- a/css/estilo.css
+++ b/css/estilo.css
@@ -129,10 +129,11 @@ aside {
   letter-spacing: 2px;
 }
 
+.detalhes {
+  padding-left: 10px;
+}
 
-
-@media (min-width: 768px) {
-
+@media (min-width: 758px) {
 
   .detalhe-titulo{
     padding-left: 20%;
@@ -274,6 +275,10 @@ aside {
 }
 #icon-bike {
   transform: translate(50%, 0%);
+}
+#hobbies h2{
+  margin-top: 0;
+  padding-top: 0;
 }
 #experiencia-profissional h2 {
   padding-bottom: 10px;
