--- a/css/estilo.css
+++ b/css/estilo.css
@@ -96,20 +96,16 @@ aside {
   margin-top: 25%;
   border-top: 1px solid grey;
 }
-.secao-corpo h2:first-child{
+.secao-corpo h2 {
   padding-bottom: 10px;
 }
-
-
 .progress-bar{
-  border-top-right-radius: 7px;
-  border-bottom-right-radius: 7px;
+  border-radius: 10px;
 }
 .progress{
   background-color: #8F98A9;
   opacity: 0.8;
-  border-top-right-radius: 7px;
-  border-bottom-right-radius: 7px;
+  border-radius: 10px;
   -webkit-box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
@@ -165,7 +161,7 @@ aside {
   /*-------------------------------------------------------------------------*/
   /*                CRIANDO O BOTAO E REALIZANDO EFEITO DE FECHAR             */
   /*--------------------------------------------------------------------------*/
-.mobile-btn {
+  .mobile-btn {
     display: block;
     color: white;
     width: 36px;
@@ -209,13 +205,16 @@ aside {
 @media (min-width: 1025px) {
   body, html {
     min-height: 670px;
-    max-width: 1544px;
+    max-width: 1600px;
     margin:0;
     width: 100%;
+    background-color: #C1CADB;
+    overflow: hidden;
   }
   h1{
     font-size: 2.5rem;
   }
+
   h2{
     font-size: 2rem;
     padding-top: 10px;
@@ -229,8 +228,12 @@ aside {
   height: 10%;
   width: 100%;
 }
+
 .navbar {
+  margin-bottom: 0;
+  border: 0px solid white;
   width: 100%;
+  height: 100%;
 }
 .hobbie-icon {
   width: 60px;
@@ -246,14 +249,42 @@ aside {
   opacity: 0;
   border: 0;
   visibility: hidden;
-  transform: translate3d(-100px,0,0);
+  transform: translate3d(0,0,100px);
   position: absolute;
   top: 0;
   margin-top: 0;
   margin-bottom: 0;
-  height: 100%;
   margin-left: 0;
-
+  height: 90%;
+  width: 77%;
+  padding-top: 10px;
+}
+#experiencia-profissional{
+  overflow: scroll;
+  padding-bottom: 60px;
+}
+.secao-corpo h2 {
+  border: 1px solid white;
+  font-weight: normal;
+  background-color: #8F98A9;
+}
+.secao-corpo h4 {
+  margin-top: 30px;
+}
+.descricao-detalhe{
+  width: 100%;
+}
+.secao-corpo p {
+  font-size: 1.2rem;
+  text-align: justify;
+  text-indent: 15px ;
+}
+.skills{
+  padding-left: 45px;
+  padding-right: 45px;
+}
+.navbar-collapse {
+  width: 100%;
 }
 .secao-ativa{
   opacity: 1;
@@ -283,9 +314,7 @@ aside {
 #experiencia-profissional h2 {
   padding-bottom: 10px;
 }
-#experiencia-profissional, #habilidades {
-  height: 60%;
-}
+
 .nav {
   margin-left: 5rem;
   height: 15px;
@@ -295,15 +324,12 @@ aside {
 }
 
 .secao-corpo{
-  float: left;
+
 }
-.navbar {
-  margin-bottom: 0;
-  border: 0px solid white;
-}
+
 aside{
   float: left;
-  width: 320px;
+  width: 23%;
   height: 100%;
   transform: translate(0,0);
   position: relative;
@@ -337,15 +363,15 @@ aside{
   margin-left: 50px;
 }
 #collapse-navbar ul {
-  margin-left: 24%;
+  margin-left: 20%;
   margin-top: 3%;
   border: none;
 }
 #collapse-navbar ul li{
- padding-right: 2rem;
+ padding-right: 0.5rem;
 }
 #collapse-navbar ul li a {
-  background-color: #8F98A9;
+  background-color: #C1CADB;
   border-bottom: none;
   color: #2B353E;
   font-size: 1.2rem;
